SERVER-58048 Resharding's initial split points for hashed shard keys don't match the sampled values